--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -45,6 +45,8 @@
 		</section>
 		<section id="portfolio">
 			<h2>Mes Projets</h2>
+			<div id="filter">
+			</div>
 			<div class="gallery">
 			</div>
 		</section>
