add modifier button

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -50,7 +50,10 @@
 			</article>
 		</section>
 		<section id="portfolio">
-			<h2>Mes Projets</h2>
+			<div>
+				<h2>Mes Projets</h2>
+				<span style="display: none;"><i class="fa-regular fa-pen-to-square"></i> modifier</span>
+			</div>
 			<div id="filter">
 			</div>
 			<div class="gallery">
