--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -52,7 +52,8 @@
 		<section id="portfolio">
 			<div>
 				<h2>Mes Projets</h2>
-				<span style="display: none;"><i class="fa-regular fa-pen-to-square"></i> modifier</span>
+				<span style="display: none;" onclick="modalGalerie()"><i class="fa-regular fa-pen-to-square"></i>
+					modifier</span>
 			</div>
 			<div id="filter">
 			</div>
