--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -30,7 +30,7 @@
     <main>
         <section id="login">
             <h2>Log in</h2>
-            <form onsubmit="event.preventDefault(); login(email.value, password.value);">
+            <form id="login-form">
                 <label for="email">E-mail</label>
                 <input type="email" name="email" id="email" required>
                 <label for="password">Mot de passe</label>
