--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -52,7 +52,7 @@
 		<section id="portfolio">
 			<div>
 				<h2>Mes Projets</h2>
-				<span style="display: none;" onclick="modalGalerie()"><i class="fa-regular fa-pen-to-square"></i>
+				<span style="display: none;" id="modifier"><i class="fa-regular fa-pen-to-square"></i>
 					modifier</span>
 			</div>
 			<div id="filter">
