--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -26,7 +26,7 @@
 		<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 		<nav>
 			<ul>
-				<li>projets</li>
+				<li><a href="./">projets</a></li>
 				<li>contact</li>
 				<li><a href="./login.html" id="login">login</a></li>
 				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
